Fix home page button layout on mobile

--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -19,6 +19,13 @@
 
 .buttons {
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
+}
+
+@media only screen and (min-width: 650px) {
+  .buttons {
+    flex-direction: row;
+  }
 }
